try to set add-opens for integration tests